top n users using CSR matrix representation, 96% improvement in runtime

--- a/test.ipynb
+++ b/test.ipynb
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "79487c25-8bcd-45fb-ac1f-8cb5ba5a0bc4",
    "metadata": {},
    "outputs": [],
@@ -1861,7 +1861,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
+   "id": "9bd55770-a642-4707-8636-6ffdc589cc1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save dataframe as hdf5 file\n",
+    "user_feature_matrix.to_hdf('user_feature_matrix.h5', mode='w', key='features')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "1ff1da09-b0f9-4ab0-815e-1662bf943b3b",
    "metadata": {},
    "outputs": [
@@ -2102,23 +2113,13 @@
        "[5 rows x 6668 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "user_feature_matrix.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "06a3ccf6-125d-47d6-b444-fd4439be2623",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_feature_matrix = user_feature_matrix.drop(['Unnamed: 0'], axis=1)"
    ]
   },
   {
@@ -2133,11 +2134,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6d59d8e1-9125-4a15-b9a9-ad6be1facb3c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import dask.dataframe as dd"
+   ]
   }
  ],
  "metadata": {
