--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "0bb434ad-5325-402d-a5e3-17445fcf8b46",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,48 @@
     "user_assessment_scores_df = pd.read_csv('data/user_assessment_scores.csv')\n",
     "user_course_views_df = pd.read_csv('data/user_course_views.csv')\n",
     "user_interests_df = pd.read_csv('data/user_interests.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2fe186c1-05cf-4c9e-8414-f1975dc799da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.net', 'android', 'angular', 'architecture', 'asp.net']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(user_interests_df[user_interests_df.user_handle == 1].interest_tag.unique())[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "99b98951-3069-4c59-9d63-bdbebdf96751",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.net', 'agile', 'android', 'angular', 'asp.net']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(user_interests_df[user_interests_df.user_handle == 3557].interest_tag.unique())[:5]"
    ]
   },
   {
